[package]
name = "cdb"
version = "0.6.1"
authors = ["Tony Bark"]
repository = "https://github.com/tonytins/cdb"
license = "GNU GPL v3"
edition = "2018"
readme = "README.md"

[dependencies]
self_update = "0.20"
chrono = "0.4"
anyhow = "1.0"
csv = "1.1"
directories = "3.0"
rusty-money = "0.3"
toml = "0.5"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "wrap_help" ]

[dependencies.serde]
version = "1.0"
features = ["derive"]